--- a/mkdocs-material/stylesheets/extra.css
+++ b/mkdocs-material/stylesheets/extra.css
@@ -40,7 +40,10 @@
   font-weight: 300;
 }
 
-body{
+h1, h2, h3, h4, h5{
+  font-family: Bison;
+}
+p{
   font-family: Bozon;
 }
 
@@ -64,26 +67,39 @@ body{
 .md-tabs__link--active{
   border-bottom: solid 2px #9c27b0;
   padding-bottom: 12px;
+  font-size: 18px;
 }
 
 .downloadBtn{
   border: solid 1px #9c27b0;
-  padding: 5px;
+  padding: 7px;
   border-radius: 20px;
-  font-size: 15px;
+  font-size: 12px;
   color: #9c27b0;
   cursor: pointer;
 }
 
 .downloadBtn:hover{
   background-color: #9c27b0;
-  border: solid 1px #9c27b0;
-  padding: 5px;
-  border-radius: 20px;
-  font-size: 15px;
   color: white;
 }
 
 img{
   margin: 0 auto;
+}
+
+.md-sidebar--primary{
+  background-color: rgba(128, 128, 128, 0.06);
+  border-left: 2px solid;
+}
+
+.md-main__inner{
+  padding-top: 0;
+}
+.md-nav__title{
+  font-size: 16px;
+}
+
+.md-typeset h1{
+  margin-bottom: 0;
 }
