--- a/mkdocs-material/stylesheets/extra.css
+++ b/mkdocs-material/stylesheets/extra.css
@@ -40,10 +40,10 @@
   font-weight: 300;
 }
 
-h1, h2, h3, h4, h5{
-  font-family: Bison;
+h1, h2, h3, h4{
+  font-family: Roboto;
 }
-p{
+p, h5{
   font-family: Bozon;
 }
 
